# countexex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  no_error.pctl
.cache/clangd/index/: impCalc.cpp.C16EA2BE2D7F7778.idx  impCalc.hpp.E742851E01FCE766.idx  main.cpp.EFF99946E666427C.idx  main.h.7EE89EBCFC371045.idx
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp  main.h
doc/: develop.md
examples/: cicle.nm  coin_flips.nm  cycle.nm  die_c2.nm  examples.md  investor.nm  property.pctl  robot.props  wlan0-2-2.nm  wlan0-2-4.nm  zeroconf.nm  zeroconfig.nm
src/: CMakeLists.txt  buildModel.cpp  buildModel.h  genTrainData.cpp  genTrainData.h  impCalc.cpp  impCalc.h  impCalc.hpp  main.cpp  main.h  utils.cpp  utils.h  utils.hpp
src/dtree_visualization/: dtreeToDot.cpp  dtreeToDot.h
src/importance_calculation/: impCalc.cpp  impCalc.h
src/model_builder/: buildModel.cpp  buildModel.h
src/train_data_generation/: genTrainData.cpp  genTrainData.h
tests/: CMakeLists.txt  genTrainDataTest.cpp
